# zk-benchmark2

./: .gitignore  README.md
jolt/: Cargo.toml
jolt-bench/: Cargo.toml
jolt-bench/guest/: Cargo.toml
jolt-bench/guest/src/: lib.rs  main.rs  models.rs  predictions.rs  python.py  sid_test.rc  test.py
jolt-bench/model/: linear_reg_model_sklearn.joblib  ridge_reg_model_sklearn.joblib
jolt-bench/src/: main.rs
jolt/guest/: Cargo.toml
jolt/guest/model/: Test_Dataset.csv  ridge_regression_params.json  scaler_params.json
jolt/guest/src/: lib.rs  predictions.rs
jolt/src/: main.rs  models.rs
model/: linear_reg_model_sklearn.joblib  ridge_reg_model_sklearn.joblib  standard_scaler_sklearn.joblib
myvenv/: pyvenv.cfg
research-paper/: build.sh
research-paper/capstone/: Capstone_Report_Template.aux  Capstone_Report_Template.bbl  Capstone_Report_Template.blg  Capstone_Report_Template.fdb_latexmk  Capstone_Report_Template.fls  Capstone_Report_Template.tex  Capstone_Report_Template.toc  File_Setup.tex  File_Steup.tex  references.bib
research-paper/content/: index.md  paper-old.md  paper.md  slides-old.md  slides.md
research-paper/content-old/: bibliography.bib  paper.md  slides.md
risc0-bench/host/src/: main.rs
risc0-bench/methods/guest/: Cargo.toml
risc0-bench/methods/guest/src/: main.rs
risc0/core/: Cargo.toml
risc0/core/src/: lib.rs
risc0/host/: Cargo.toml
risc0/host/model/: scaler_params.json
risc0/host/src/: lib.rs  main.rs
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
sp1-bench/: .env
sp1-bench/elf/: riscv32im-succinct-zkvm-elf
sp1-bench/lib/: Cargo.toml
sp1-bench/lib/src/: lib.rs
sp1-bench/program/: Cargo.toml
sp1-bench/program/elf/: riscv32im-succinct-zkvm-elf
sp1-bench/program/src/: main.rs
sp1-bench/script/: Cargo.toml
sp1-bench/script/src/: main.rs
sp1/elf/: riscv32im-succinct-zkvm-elf
sp1/lib/: Cargo.toml
sp1/lib/src/: lib.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
sp1/script/model/: linear_regression_params.json
