[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.16.0"
csv = "1.1"
num-traits = "0.2"
